News
====

2.1.0 (unreleased)
------------------

- Nothing changed yet.


2.0.1 (2013-05-21)
------------------

- Update tags on modified event for ICMSContent only (#12394).


2.0 (2013-04-23)
----------------

- first release